<resources>
    <string name="app_name">SimpleWear Settings</string>

    <string name="permission_title_bgopts">Allow Background Access</string>
    <string name="message_bgopts_disabled">Needed to run actions properly in the background</string>
    <string name="message_bgopts_enabled">Background access enabled</string>

    <string name="permission_title_securesettings">Set Secure Settings</string>
    <string name="message_securesettings_disabled">Needed to set mobile data and location settings</string>
    <string name="message_securesettings_enabled">Settings access enabled</string>

    <string name="permission_title_rootaccess">Enable Root Access</string>
    <string name="message_rootaccess_disabled">Root access disabled</string>
    <string name="message_rootaccess_enabled">Root access enabled</string>

    <string name="pref_title_showlauncher">Show app icon</string>
    <string name="pref_summary_showlauncher">Show app icon in the launcher</string>

    <string name="url_root_access_help" translatable="false">https://github.com/SimpleAppProjects/SimpleWear/wiki/Root-Access</string>
    <string name="url_secure_settings_help" translatable="false">https://github.com/SimpleAppProjects/SimpleWear/wiki/Enable-WRITE_SECURE_SETTINGS-permission</string>

    <string name="permission_title_bt">Bluetooth</string>
    <string name="permission_bt_enabled">Bluetooth permission enabled</string>
    <string name="permission_bt_disabled">Bluetooth permission disabled</string>

    <string name="permission_title_shizuku">Shizuku</string>
    <string name="message_shizuku_disabled">Shizuku permission disabled</string>
    <string name="message_shizuku_not_installed">Shizuku not installed</string>
    <string name="message_shizuku_not_running">Shizuku service not running</string>
    <string name="message_shizuku_running">Shizuku service enabled</string>
    <string name="message_shizuku_alert">Shizuku can be used as an option to provide system permissions to SimpleWear for non-root devices. As this is a third-party app, please use at your own discretion.
        Please note that the Shizuku service will need to be manually restarted every time on boot.</string>

</resources>